# kernel_rl

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml  setup.sh
docs/: cutile.md  modal-integration.md  prompt-format.md  rl-hyperparam.md
kernel_rag_index/: examples.pkl  index.faiss  metadata.json
kernel_rl/: __init__.py
kernel_rl/config/: rl_kernelbench.yaml  rl_kernelbench_kevin.yaml  rl_kernelbench_raicl.yaml
kernel_rl/envs/: __init__.py  kernelbench_client.py  kernelbench_env.py  multiturn_kernelbench_env.py
kernel_rl/evaluation/: __init__.py
kernel_rl/modal/: __init__.py  app.py  evaluator.py
kernel_rl/rag/: __init__.py  corpus.py  embeddings.py  prompt_builder.py  retriever.py
kernel_rl/scripts/: build_rag_index.py  eval_kernel_rl.py  train_kernel_rl.py
kernel_rl/training/: __init__.py  loop.py  reward.py
rl_dashboard/: __init__.py  server.py
rl_dashboard/static/: app.js  index.html  style.css
scripts/: setup_env.sh
